--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -5,7 +5,7 @@
     text-align: center;
     margin: 0 0.5em;
     margin-top: 10px;
-    box-shadow: 2px 6px 8px 0 rgb(22 22 26 / 18%);
+    box-shadow: 2px 6px 8px 0 rgba(52, 180, 240, 0.18);
     border: none;
     border-radius: 0;
 }
